force-app/main/default/objects/Apttus_Config2__AdjustmentLineItem__c/fields/APTS_Language__c.field-meta.xml
<CustomField>
    <fullName>APTS_Language__c</fullName>
    <description>Used to get translation from translations</description>
    <formula>Apttus_Config2__LineItemId__r.Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.APTS_Language__c</formula>
    <label>Language</label>
    <type>Text</type>
</CustomField>