force-app/main/default/objects/Apttus_Config2__AdjustmentLineItem__c/fields/APTS_Market__c.field-meta.xml
<CustomField>
    <fullName>APTS_Market__c</fullName>
    <description>Used for translation</description>
    <formula>Apttus_Config2__LineItemId__r.Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.APTS_Market__c</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>