force-app/main/default/objects/Apttus_Config2__AdjustmentLineItem__c/fields/PromotionNameTranslation__c.field-meta.xml
<CustomField>
    <fullName>PromotionNameTranslation__c</fullName>
    <description>Used for Translation of Incentive Items</description>
    <label>Promotion Name Translation</label>
    <type>TextArea</type>
</CustomField>